# mcp-telegram

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml  test_get_chats.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dependency-review.yml  python-tests.yml
mcp_telegram/: __init__.py  server.py
scripts/: get_session.py
