[project]
name = "mcp-telegram"
version = "0.1.0"
description = "Telegram MTProto MCP server for accessing Telegram data through AI assistants"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MCP Telegram Contributors"}
]
keywords = ["telegram", "mcp", "claude", "ai", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyrogram>=2.0.106",
    "tgcrypto>=1.2.5",  # Required for better performance with Pyrogram
    "python-dotenv>=1.0.0",
    "mcp>=1.2.1",
    "anyio>=4.8.0",
    "pillow>=11.1.0",
    "pyxdg>=0.25",
]

[project.urls]
Documentation = "https://github.com/TeaGuild/mcp-telegram/blob/master/README.md"
Source = "https://github.com/TeaGuild/mcp-telegram"
"Bug Tracker" = "https://github.com/TeaGuild/mcp-telegram/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.3.0",
    "pytest>=7.3.1",
    "ruff>=0.0.262",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_telegram"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
